Support Java JDK 12