@@ -10,7 +10,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
     <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-    <java.version>1.8</java.version>
+    <java.version>12</java.version>
     <jgrapht.version>0.9.0</jgrapht.version>
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.25</slf4j.version>
@@ -28,6 +28,7 @@
           <configuration>
             <source>${java.version}</source>
             <target>${java.version}</target>
+            <compilerArgs>--enable-preview</compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -72,6 +73,25 @@
       <groupId>colt</groupId>
       <artifactId>colt</artifactId>
       <version>${colt.version}</version>
+    </dependency>
+
+    <!-- JAXB API -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.3.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.2</version>
     </dependency>
   </dependencies>
 </project>
